demo/src/main/java/com/example/demo/Util/Error/StorageException.java
package com.example.demo.Util.Error;

public class StorageException extends RuntimeException {
    public StorageException(String message){
        super(message);
    }
}

